# ai-code-editor

./: .gitignore  .gitmodules  .nvmrc  CMakeLists.txt  mainwindow.cpp  mainwindow.h
MagiaEditor/: CMakeLists.txt
views/: AIChatWidget.h  App.h  CodeEditor.h  FileExplorerWidget.h  GenericEditor.h  MagiaTheme.h
